# TemplateSpec

./: .gitignore  TemplateSpec.cabal
src/: Lib.hs
