name:                TemplateSpec
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/osa1/TemplateSpec
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail
copyright:           2015 Ömer Sinan Ağacan
category:            SomethingElse
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:                 git
  location:             https://github.com/osa1/TemplateSpec

library
  hs-source-dirs:       src
  exposed-modules:      Lib

  build-depends:
    base                >= 4.7 && < 5,
    containers,
    haskell-src-exts    >= 1.17 && < 1.18,
    template-haskell

  ghc-options:          -Wall -O2 -funbox-strict-fields
  default-language:     Haskell2010

executable TemplateSpec-exe
  hs-source-dirs:       app
  main-is:              Main.hs

  build-depends:
    base,
    TemplateSpec

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

test-suite TemplateSpec-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs

  build-depends:
    base,
    TemplateSpec

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
